# portfolio_optimisation

./: README.md  pyproject.toml  requirements.txt
config/: markets.yaml  views.yaml
data/raw/: benchmarks_NIFTYBEES_NS_prices.meta.json  benchmarks_NIFTYBEES_NS_prices.parquet  benchmarks_SPY_prices.meta.json  benchmarks_SPY_prices.parquet  india_prices.meta.json  india_prices.parquet  us_caps.parquet  us_prices.meta.json  us_prices.parquet
notebooks/: 01_full_analysis.ipynb
src/portfolio/: __init__.py  backtest.py  black_litterman.py  config.py  data.py  monte_carlo.py  optimize.py  reporting.py  stats.py  theme.py
tests/: test_backtest.py  test_black_litterman.py  test_optimize.py
