[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-optimization"
version = "0.1.0"
description = "Client-advisory portfolio optimization across Nifty 50 and S&P 500 universes"
authors = [{ name = "Rachit Arora" }]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
